# ai_trading

./: .bandit  .coverage  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Phase15_程式碼品質改進完成報告.md  README.md  SECURITY.md  STRUCTURE.md  Todo_list.md  Web_UI_Code_Review_Report.md  Web_UI_Phase4.1_Code_Review_Report.md  Web_UI_Phase4.1_Final_Summary.md  audit_security.ps1  auto_trading_project.code-workspace  bandit_report.json  bandit_report_fixed.json  check_syntax.py  docker-compose-elk.yml  docker-compose-loki.yml  docker-compose-monitoring.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  fix_database_schema.py  fix_flake8_issues.py  fix_phase32_environment.py  monitoring_test_report.md  performance_results_simple.json  performance_test_simple.py  pyproject.toml  requirements-ai.txt  requirements-production.txt  requirements.txt  setup_clean_env.ps1  start_optimized.py  test_backtest_service.py  (+14 more)
.envs/: .env.template
.github/workflows/: ci.yml  monitoring-quality-check.yml  pr-quality-check.yml  production-deploy.yml  quality-check-optimized.yml  quality-check.yml  rollback.yml  security-scan.yml  staging-deploy.yml  weekly-quality-report.yml
.streamlit/: config.toml
backup/removed_modules_2025-07-26/: web_ui_production.py
backup/root_cleanup_20250731_231120/: 數據下載功能修復說明.md  數據檢視技術指標修復說明.md
backup/web_ui_files/: integrated_main.py.backup  web_ui_production.py.backup  web_ui_redesigned.py.backup
config/: .flake8  .pre-commit-config.yaml  .pylintrc  __init__.py  alert_rules.yaml  brokers.yaml  data_sources_config.py  database_production.yaml  environment_config.py  llm_config.yaml  llm_strategies.yaml  monitoring.yaml  monitoring_production.json  mypy.ini  notification_config.json  pylint.ini  pytest.ini  scheduler_config.json  stock_list_config.yaml  ui_preferences.json
config/docker/: docker-compose-elk.yml  docker-compose-loki.yml  docker-compose-monitoring.yml
config/environments/: README.md
config/security/: container_security.yaml
data/: market_data.db  market_info.db
docker/: Dockerfile.ai  Dockerfile.ui  docker-compose.yml
docs/: 12個功能分類手動測試指南.md  API使用手冊.md  CHANGELOG.md  Git_Flow_使用指南.md  Google_Style_Docstring_規範.md  MVP版本Todo_list.md  Q&A常見問題.md  SECURITY.md  SUMMARY.md  TA-LIB安裝指南.md  Todo_list.md  UI檔案清理和重構完成報告.md  ai_model_integration_guide.md  backtest_guide.md  core_modules.md  core_modules_summary.md  data_ingestion_module.md  data_source_research.md  database_improvements.md  file_organization.md  model_training_guide.md  new_developer_guide.md  quality  strategy_research_summary.md  system_architecture.md  使用者手冊.md  功能使用指南.md  動態指標選擇系統說明.md  安全密鑰管理指南.md  安全指南.md  故障排除與FAQ.md  數據檢視無窮循環修復報告.md  數據源改進實施報告.md  數據源驗證完成報告.md  新進人員指南.md  檔案結構整理報告.md  測試完成總結報告.md  用戶快速入門手冊.md  當前檔案結構說明.md  策略配置指南.md  (+10 more)
docs/docker/: docker_configurations.md
docs/reports/: Advanced_UI_Features_Code_Review_Report.md  Phase15_程式碼品質檢查報告.md  Phase4.1_Web_UI_Deep_Code_Review_Report.md  Web_UI_Code_Review_Report.md  Web_UI_Phase4.1_Code_Review_Report.md  Web_UI_Phase4.1_Final_Summary.md  monitoring_test_report.md
docs/scripts/: powershell_scripts.md
docs/security/: bandit_report_fixed.json
docs/使用者手冊/: Live_Trading_安全操作指南.md  README.md  一鍵安裝指南.md  券商API整合使用指南.md  券商API設定教程.md  功能概覽.md  常見錯誤與解決方案.md  投資新手快速入門指南.md  故障排除手冊.md  第一次回測教程.md  策略創建步驟指南.md  策略說明.md  策略配置指南.md  統一用戶操作指南.md  角色操作手冊.md  量化交易基礎教程.md  風險參數設定指南.md  (+1 more)
examples/: README.md  backpressure_and_failover_demo.py  data_cleaning_example.py  demo_backtest_enhanced.py  demo_responsive.py  enhanced_indicators_demo.py  historical_backfill_enhanced_demo.py  indicators_example.py  logging_features_demo.py  n8n_workflow_examples.md  phase15_demo.py  simple_backfill_demo.py
images/: README.md
k8s/: README.md
mcp_crawler/: package-lock.json  package.json  server.cjs
notebooks/: Multi_Channel_Crawler_Demo.py  Multi_Source_Data_Demo.py  Real_Data_Validation_Test.ipynb  Simple_Real_Data_Test.ipynb
scripts/: README.md  activate_performance_optimizations.py  add_docstrings.py  analyze_file_sizes.py  analyze_pr_changes.py  check_deprecated_imports.py  check_docstring_quality.py  check_duplicates.py  check_ib_quality.py  check_test_coverage.py  check_unused_imports.py  code_quality_check.py  collect_feedback.py  comprehensive_file_organizer.py  comprehensive_system_integration_test.py  database_backup_scheduler.py  database_performance_monitor.py  deep_cleanup.py  deploy_production.py  disaster_recovery_automation.py  distributed_demo.py  file_structure_audit.py  final_verification.py  find_function_level_imports.py  fix_code_quality.py  fix_docstring_format.py  fix_risk_management_schema.py  fix_streamlit_issues.py  format_code.py  generate_quality_report.py  generate_weekly_report.py  improve_naming.py  init_real_stock_db.py  install_dependencies.py  launch_enhanced_ui.py  launch_ui_comparison.py  llm_backtest_validation.py  migrate_database_step2.py  notification_system.py  optimize_function_imports.py  (+73 more)
src/: config.py
tests/: README.md  conftest.py  test_12_categories.py  test_12_categories_functionality.py  test_agents_base.py  test_agents_phase1.py  test_agents_phase2.py  test_agents_phase3.py  test_ai_display_integration.py  test_ai_model_integration.py  test_ai_model_integration_quality.py  test_ai_model_management.py  test_ai_models_api.py  test_api_auth.py  test_api_core.py  test_backpressure_and_failover.py  test_backtest_service.py  test_backtest_system.py  test_beginner_interface.py  test_broker_integration.py  test_broker_simulation.py  test_checksum_manager.py  test_compression_manager.py  test_config.py  test_config_manager.py  test_config_validator.py  test_coordination_phase4.py  test_core_comprehensive.py  test_core_events.py  test_core_functionality.py  test_core_imports.py  test_core_portfolio_risk.py  test_data_cleaning.py  test_data_collection_system.py  test_data_ingest.py  test_data_management.py  test_data_management_api.py  test_data_management_core.py  test_data_masking.py  test_data_pipeline.py  (+66 more)
utils/: README.md
(+1210 files in other folders)
