[project]
name = "ai-trading"
version = "0.1.0"
description = "AI Stock Automated Trading System"
authors = [
    {name = "Cookie",email = "noiroao@gmail.com"}
]
package-mode = false
readme = "README.md"
requires-python = ">=3.10,<4.0.0"
dependencies = [
    "pandas (==2.2.3)",
    "numpy (==1.26.4)",
    "scipy (==1.15.2)",
    "joblib (==1.5.0)",
    "requests (==2.32.3)",
    "beautifulsoup4 (==4.13.4)",
    "feedparser (==6.0.11)",
    "pandas-datareader (>=0.10.0)",
    "matplotlib (==3.10.1)",
    "seaborn (==0.12.2)",
    "plotly (>=5.0.0)",
    "ipywidgets (==8.1.7)",
    "jupyterlab (==4.4.2)",
    "ipykernel (>=6.0.0)",
    "tqdm (==4.67.1)",
    "python-json-logger (>=2.0.0)",
    "apscheduler (==3.11.0)",
    "python-dotenv (>=1.0.0)",
    "pydantic (==2.7.4)",
    "sqlalchemy (==2.0.6)",
    "scikit-learn (==1.3.2)",
    "statsmodels (>=0.14.0)",
    "riskfolio-lib (==7.0.1)",
    "cvxpy (==1.6.5)",
    "ecos (==2.0.14)",
    "osqp (==1.0.3)",
    "gymnasium (==1.1.1)",
    "finmind (>=1.8.0,<2.0.0)",
    "yfinance (>=0.2.61,<0.3.0)",
    "alpha-vantage (>=3.0.0,<4.0.0)",
    "snownlp (>=0.12.3,<0.13.0)",
    "psutil (>=7.0.0,<8.0.0)",
    "pyarrow (>=4.0.0,<20.0.0)",
    "backtrader (>=1.9.76,<2.0.0)",
    "tensorflow (>=2.15.0,<3.0.0)",
    "tensorflow-io-gcs-filesystem (==0.31.0) ; python_version >= '3.10' and python_version < '3.12'",
    "torch (>=2.0.0,<3.0.0)",
    "mlflow (>=2.10.0,<3.0.0)",
    "shap (>=0.44.0,<0.45.0)",
    "lime (>=0.2.0,<0.3.0)",
    "xgboost (>=2.0.0,<3.0.0)",
    "lightgbm (>=4.1.0,<5.0.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "onnx (>=1.15.0,<2.0.0)",
    "onnxruntime (>=1.17.0,<2.0.0)",
    "tf2onnx (>=1.16.0,<2.0.0)",
    "prometheus-client (>=0.19.0,<0.20.0)",
    "memory-profiler (>=0.61.0,<0.62.0)",
    "line-profiler (>=4.1.0,<5.0.0)",
    "dask (>=2024.4.1,<2025.0.0)",
    "ray (>=2.9.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
autopep8 = "^2.3.2"
black = "^25.1.0"
flake8 = "^7.2.0"
pylint = "^3.3.7"
pytest = "^8.3.5"
autoflake = "^2.3.1"
pytest-cov = "^6.1.1"
pyportfolioopt = "1.4.1"

